# moviemate

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: Dockerfile.local  Procfile  alembic.ini  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
backend/alembic/: env.py
backend/alembic/versions/: 208c9f261dbd_add_last_synced_at_field.py  dfd61d8dd209_baseline_existing_database.py
backend/routes/: movies.py  tmdb.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: axios.js
frontend/src/components/: MovieCard.jsx  MovieForm.jsx  MovieModal.jsx  NavBar.jsx  Toast.jsx
frontend/src/pages/: AddMovie.jsx  Home.jsx  Stats.jsx
